# SecureNet-Messenger

./: .env.example  .gitignore  ADDITIONAL_FIXES.md  AUDIT_REPORT.md  DB_AUDIT_REPORT.md  DEPLOYMENT.md  Dockerfile  FEATURE_MATRIX.md  FIXES_APPLIED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JWT_KEYS_FOR_VERCEL.txt  Makefile  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SUPABASE_CREDENTIALS.txt  capacitor.config.ts  docker-compose.yml  fix_imports.go  fix_imports.ps1  go.mod  go.sum  id_ed25519  id_ed25519.pub  index.html  package-lock.json  package.json  supabase_schema.sql  tsconfig.json  update.json  vercel.json  vite.config.ts
.github/workflows/: android.yml  ci.yml  security.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
api/: index.go
backend/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum
client-windows/: index.html  manifest.json  sw.js
client-windows/src-tauri/: Cargo.toml  tauri.conf.json
client-windows/src-tauri/src/: desktop.rs  main.rs
cmd/server/: main.go
core/api/: devices.go  groups.go  media.go  routes.go
core/auth/: jwt.go  jwt_test.go
core/config/: config.go  config_test.go
core/db/: db.go
core/models/: audit.go  (+1 more)
docs/: PRIVACY_POLICY.md  PROJECT_DOSSIER.md  TERMS_OF_SERVICE.md
hf_deploy/: Dockerfile
infra/: nginx.conf
public/: sw.js
scratch/: gen_jwt_keys.go  gen_key.go  gen_keys.go  gen_vapid.go  priv.txt  priv_b64.txt  pub.txt  pub_b64.txt  test_pem.go  to_b64.go
scripts/: create-partition.sh
src/: App.tsx  index.css  main.tsx
(+123 files in other folders)
